# slack_integrations_langgraph

./: README.md
apps/slack-integrations-offline/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
apps/slack-integrations-offline/configs/: collect_crawl_data.yaml
apps/slack-integrations-offline/pipelines/: __init__.py  collect_crawl_data.py
apps/slack-integrations-offline/src/slack_integrations_offline/: __init__.py  config.py  utils.py
apps/slack-integrations-offline/src/slack_integrations_offline/infrastructure/aws/: s3.py
apps/slack-integrations-offline/src/slack_integrations_offline/rag/: __init__.py
apps/slack-integrations-offline/steps/: __init__.py
apps/slack-integrations-offline/steps/collect_crawl_data/: __init__.py  extract_crawled_data.py
apps/slack-integrations-offline/steps/collect_urls/: __init__.py
apps/slack-integrations-offline/steps/compute_rag/: __init__.py
apps/slack-integrations-offline/steps/generate_summaries/: __init__.py  generate_summary.py
apps/slack-integrations-offline/steps/infrastructure/: __init__.py  fetch_from_mongodb.py  ingest_to_mongodb.py  save_documents_to_disk.py  upload_to_s3.py
apps/slack-integrations-offline/tools/: run.py
apps/slack-integrations-online/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
apps/slack-integrations-online/src/slack_integrations_online/: config.py  utils.py
apps/slack-integrations-online/src/slack_integrations_online/application/: __init__.py
apps/slack-integrations-online/src/slack_integrations_online/tools/: __init__.py  app.py  slack_app.py
(+15 files in other folders)
