[project]
name = "slack-integrations-online"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.12.0",
    "langchain-community>=0.4",
    "langchain-mongodb>=0.7.1",
    "langchain-openai>=1.0.1",
    "loguru>=0.7.3",
    "mem0ai>=1.0.0",
    "openai-agents>=0.4.2",
    "python-dotenv>=1.1.1",
    "slack-sdk>=3.37.0",
    "smolagents>=1.4.1",
]
